--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 2.8)
 include_directories(C)
 include_directories(B)
 include_directories(A)
+include_directories(.)
 add_subdirectory(B)	
 add_executable(main C/main.cpp)
 target_link_libraries(main lib)
